dark mode cta fix

--- a/_includes/css/style.darkmode.css
+++ b/_includes/css/style.darkmode.css
@@ -1,4 +1,10 @@
+
+body.dark-mode { background: #232323 !important; color: white !important; }
+body.dark-mode > header { background: #232323 !important; color: white !important; }
+body.dark-mode .cta { background-color: #656565 !important; }
+
 @media (prefers-color-scheme:dark) {
   body { background: #232323 !important; color: white !important; }
   body > header { background: #232323 !important; color: white !important; }
+  .cta { background-color: #656565 !important; }
 }
